primera entrega final

--- a/index.html
+++ b/index.html
@@ -6,35 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHESCA</title>
+    <meta name="description=" content="Pintura · Escultura · Dibujo · Grabado · Arte digital · Diseño Gráfico">
     <link rel="shortcut Icon" href="./img/PlantIllustration.jpeg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header>
-        <h1>CHESCA</h1>
+    <header class="navbar navbar-expand-sm navbar-dark">
+        <h1 class="navbar-brand" class="container-fluid">CHESCA</h1>
     </header>
     <main>
-        <p>Bienvenidos a la tienda online</p>
-        <div>
+        <p class="margin">Bienvenidos a la tienda online</p>
+        <div class="row">
             <h2>Productos</h2>
             <a>Mate Personalizado</a>
-            <div>
-                <img src="./img/MatePersonalizado.jpeg" alt="Mate artesanal con dibujo de El David de Miguel Angel con una flor rosa">
-                <a>$1400</a>
+            <a>$1400</a>
+            <div class="col-md-3">
+                <img src="./img/MatePersonalizado.jpeg"
+                    alt="Mate artesanal con dibujo de El David de Miguel Angel con una flor rosa">
             </div>
             <a>Ilustración personalizada</a>
-            <div>
-                <img src="./img/IlustraciónPersonalizada.jpeg" alt="Ilustración de una mujer con su mascota en un portarretrato">
-                <a>$1500</a>
+            <a>$1500</a>
+            <div class="col-md-3">
+                <img src="./img/IlustraciónPersonalizada.jpeg"
+                    alt="Ilustración de una mujer con su mascota en un portarretrato">
             </div>
         </div>
     </main>
-    <footer>
-        <adress>
-        Redes Sociales: <a target="_blank" href="https://www.instagram.com/chescailustraciones/">@chescailustraciones</a>
-        <a target="_blank" href="https://www.instagram.com/chescamattioli/">@chescamattioli</a>
-    </adress> 
+    <footer class="footer container-fluid text-center">
+        <adress class="links">
+            Redes Sociales: <a target="_blank"
+                href="https://www.instagram.com/chescailustraciones/">@chescailustraciones</a>
+            <a target="_blank" href="https://www.instagram.com/chescamattioli/">@chescamattioli</a>
+        </adress>
     </footer>
     <script src="js/javaScrips.js"></script>
 </body>
