--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
@@ -19,13 +20,13 @@
         <button id="carrito" type="button" class="btn btn-primary btn-lrg">Carrito</button>
     </header>
     <main>
-        <form>
+        <!--form>
             <fieldset>
                 <label for="nombre"> Escriba su nombre:</label>
                 <input type="text" id="nombre"/>
                 <button type="button" onclick="saludo()">Enviar</button>
             </fieldset>
-        </form>
+        </form>-->
         <div class="main container text-center">
             <h2 class="margin">Bienvenidos a la tienda online</h2>
             <h2>Productos</h2>
@@ -77,7 +78,7 @@
                     <ul id="carrito" class="list-group"></ul>
                     <hr>
                     <p class="text-right">Total: <span id="total"></span>&dollar;</p>
-                    <button id="boton-vaciar" class="btn">Vaciar</button>
+                    <button id="boton-vaciar" type="button" class="btn btn-primary btn-sm">Vaciar</button>
             </aside>
         </div>
     </main>
