--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
                     <button id="boton-vaciar" type="button" class="btn btn-primary btn-sm">Vaciar</button>
             </aside>
         </div>
+        <h2>Datos de interés!</h2>
+    <hr/>
+
+    <ul id="datos">
+    </ul>
+
     </main>
     <footer class="footer container-fluid text-center">
         <adress class="links">
