--- a/index.html
+++ b/index.html
@@ -20,73 +20,21 @@
         <button id="carrito" type="button" class="btn btn-primary btn-lrg">Carrito</button>
     </header>
     <main>
-        <!--form>
-            <fieldset>
-                <label for="nombre"> Escriba su nombre:</label>
-                <input type="text" id="nombre"/>
-                <button type="button" onclick="saludo()">Enviar</button>
-            </fieldset>
-        </form>-->
-        <div class="main container text-center">
-            <h2 class="margin">Bienvenidos a la tienda online</h2>
-            <h2>Productos</h2>
-            <div class="row producto">
-                <div id= item class="col-md-4">
-                    <img src="./img/MatePersonalizado.jpeg" class="img-responsive" style="width:100%"
-                        alt="Mate artesanal con dibujo de El David de Miguel Angel con una flor rosa">
-                    <h3>Mate Personalizado</h3>
-                    <p>$1400</p>
-                    <button id="mateBtn" type="button" class="btn btn-primary btn-sm">Comprar</button>
-                </div>
-                <div id= item class="col-md-4">
-                    <img src="./img/IlustraciónPersonalizada.jpeg" class="img-responsive" style="width:100%"
-                        alt="Ilustración de una mujer con su mascota en un portarretrato">
-                    <h3>Ilustración personalizada</h3>
-                    <p>$1500</p>
-                    <button id="ilusBtn" type="button" class="btn btn-primary btn-sm">Comprar</button>
-                </div>
-                <div id= item class="col-md-4">
-                    <img src="./img/PrintPErsonalizado.jpeg" class="img-responsive" style="width:100%"
-                        alt="Ilustración de un perro cruzando la calle">
-                    <h3>Print personalizado</h3>
-                    <p>$1200</p>
-                    <button id="printBtn" type="button" class="btn btn-primary btn-sm">Comprar</button>
-                </div>
-            </div>
-
-            <div class="row producto">
-                <div id= item class="col-md-4">
-                    <img src="./img/CuadroPersonalizado.jpeg" class="img-responsive" style="width:100%"
-                        alt="Cuadro pintado de la luna ">
-                    <h3>Cuadro personalizado</h3>
-                    <p>$2000</p>
-                    <button id="cuadroBtn" type="button" class="btn btn-primary btn-sm">Comprar</button>
-                </div>
-                <div id= item class="col-md-4">
-                    <img src="./img/MiniBastidorPersonalizado.jpeg" class="img-responsive" style="width:100%"
-                        alt="Mini cuadro de un perro">
-                    <h3>Mini Bastidor personalizado</h3>
-                    <p>$1900</p>
-                    <button id="miniBBtn" type="button" class="btn btn-primary btn-sm">Comprar</button>
-                </div>
-            </div>
-        </div>
-        <!-- Carrito -->
-        <div id="items" class="col-sm-8 row"></div>
-            <aside class="col-sm-4">
-                <h2>Carrito</h2>
+        <div class="container">
+            <div class="row">
+                <!-- Articulos -->
+                <main id="items" class="col-sm-8 row"></main>
+                <!-- Carrito -->
+                <aside class="col-sm-4">
+                    <h2>Carrito</h2>
                     <ul id="carrito" class="list-group"></ul>
                     <hr>
-                    <p class="text-right">Total: <span id="total"></span>&dollar;</p>
-                    <button id="boton-vaciar" type="button" class="btn btn-primary btn-sm">Vaciar</button>
-            </aside>
+                    <!-- Precio total -->
+                    <p class="text-right">Total: <span id="total"></span>$</p>
+                    <button id="btn-vaciar" class="btn btn-danger">Vaciar</button>
+                </aside>
+            </div>
         </div>
-        <h2>Datos de interés!</h2>
-    <hr/>
-
-    <ul id="datos">
-    </ul>
-
     </main>
     <footer class="footer container-fluid text-center">
         <adress class="links">
@@ -95,7 +43,7 @@
             <a target="_blank" href="https://www.instagram.com/chescamattioli/">@chescamattioli</a>
         </adress>
     </footer>
-    <script src="js/javaScrips.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
